--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
   <meta name="description" content="A brilliant workspace manager & quick launcher for the Linux Desktops.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="app_fleet_webpage">
+  <meta name="apple-mobile-web-app-title" content="App Fleet">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>app_fleet_webpage</title>
+  <title>App Fleet</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
